--- a/unit1.lfm
+++ b/unit1.lfm
@@ -8,12 +8,28 @@ object Form1: TForm1
   ClientWidth = 498
   LCLVersion = '2.0.8.0'
   object Button1: TButton
-    Left = 16
+    Left = 136
     Height = 25
-    Top = 16
+    Top = 40
     Width = 75
-    Caption = 'Button1'
+    Caption = 'HALO'
     OnClick = button
     TabOrder = 0
+  end
+  object eNAMA: TEdit
+    Left = 34
+    Height = 23
+    Top = 40
+    Width = 80
+    TabOrder = 1
+    Text = 'eNAMA'
+  end
+  object Label1: TLabel
+    Left = 34
+    Height = 15
+    Top = 20
+    Width = 36
+    Caption = 'NAMA'
+    ParentColor = False
   end
 end
