--- a/backup/unit1.lfm
+++ b/backup/unit1.lfm
@@ -1,19 +1,38 @@
 object Form1: TForm1
-  Left = 617
+  Left = 858
   Height = 323
-  Top = 165
+  Top = 271
   Width = 498
-  Caption = 'Form1'
+  BorderIcons = [biSystemMenu, biMinimize, biMaximize, biHelp]
+  Caption = 'HELLO'
   ClientHeight = 323
   ClientWidth = 498
+  Color = clRed
+  OnCreate = FormCreate
   LCLVersion = '2.0.8.0'
   object Button1: TButton
-    Left = 16
+    Left = 136
     Height = 25
-    Top = 16
+    Top = 40
     Width = 75
-    Caption = 'Button1'
+    Caption = 'HALO'
     OnClick = button
     TabOrder = 0
+  end
+  object eNAMA: TEdit
+    Left = 34
+    Height = 23
+    Top = 40
+    Width = 80
+    TabOrder = 1
+    Text = 'eNAMA'
+  end
+  object Label1: TLabel
+    Left = 34
+    Height = 15
+    Top = 20
+    Width = 36
+    Caption = 'NAMA'
+    ParentColor = False
   end
 end
