--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,11 +1,14 @@
 object Form1: TForm1
-  Left = 617
+  Left = 706
   Height = 323
-  Top = 165
+  Top = 95
   Width = 498
-  Caption = 'Form1'
+  BorderIcons = [biSystemMenu, biMinimize, biMaximize, biHelp]
+  Caption = 'HELLO'
   ClientHeight = 323
   ClientWidth = 498
+  Color = clRed
+  OnCreate = FormCreate
   LCLVersion = '2.0.8.0'
   object Button1: TButton
     Left = 136
@@ -21,6 +24,7 @@ object Form1: TForm1
     Height = 23
     Top = 40
     Width = 80
+    OnChange = eNAMAChange
     TabOrder = 1
     Text = 'eNAMA'
   end
