--- a/backup/unit1.lfm
+++ b/backup/unit1.lfm
@@ -1,12 +1,12 @@
 object Form1: TForm1
-  Left = 858
+  Left = 694
   Height = 323
-  Top = 271
+  Top = 132
   Width = 498
   BorderIcons = [biSystemMenu, biMinimize, biMaximize, biHelp]
   Caption = 'HELLO'
-  ClientHeight = 323
-  ClientWidth = 498
+  ClientHeight = 0
+  ClientWidth = 0
   Color = clRed
   OnCreate = FormCreate
   LCLVersion = '2.0.8.0'
@@ -24,6 +24,7 @@ object Form1: TForm1
     Height = 23
     Top = 40
     Width = 80
+    OnChange = eNAMAChange
     TabOrder = 1
     Text = 'eNAMA'
   end
